# ic4-examples

./: .gitignore  README.md
c/device-handling/device-enumeration/: CMakeLists.txt
c/device-handling/device-enumeration/src/: device-enumeration.c
c/device-handling/device-list-changed/: CMakeLists.txt
cpp/: CMakeLists.txt  README.md
cpp/advanced-camera-features/action-command-broadcast-trigger/: CMakeLists.txt
cpp/advanced-camera-features/action-command-broadcast-trigger/src/: action-command-broadcast-trigger.cpp
cpp/advanced-camera-features/connect-chunkdata/: CMakeLists.txt
cpp/advanced-camera-features/connect-chunkdata/src/: connect-chunkdata.cpp
cpp/advanced-camera-features/event-exposure-end/: CMakeLists.txt
cpp/advanced-camera-features/event-exposure-end/src/: event-exposure-end.cpp
cpp/advanced-camera-features/event-line1-edge/: CMakeLists.txt
cpp/advanced-camera-features/event-line1-edge/src/: event-line1-edge.cpp
cpp/camera-specific/dolp-segmentation/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  sliderctrl.h
cpp/common/: console-helper.h
cpp/device-handling/device-enumeration/: CMakeLists.txt
cpp/device-handling/device-enumeration/src/: device-enumeration.cpp
cpp/device-handling/device-list-changed/: CMakeLists.txt
cpp/device-handling/device-list-changed/src/: device-list-changed.cpp
cpp/device-handling/device-lost/: CMakeLists.txt
cpp/device-handling/device-lost/src/: device-lost.cpp
cpp/ic4-ctrl/: CMakeLists.txt  README.md  vcpkg.json
cpp/ic4-ctrl/src/: fps_counter.h  helper_json.cpp  helper_json.h  ic4-ctrl-helper.h  ic4-ctrl.cpp  ic4_enum_to_string.h  print_ic4_object.cpp  print_ic4_object.h  print_property.cpp  print_property.h  stream_test.cpp  stream_test.h  stream_test_camera.cpp  stream_test_camera.h
cpp/image-acquisition/measure-fps/: CMakeLists.txt
cpp/image-acquisition/measure-fps/src/: measure-fps.cpp
cpp/image-acquisition/record-mp4-h264/: CMakeLists.txt  README.md
cpp/image-acquisition/record-mp4-h264/src/: record-mp4-h264.cpp
cpp/image-acquisition/save-bmp-on-trigger/: CMakeLists.txt  README.md
cpp/image-acquisition/save-bmp-on-trigger/src/: save-bmp-on-trigger.cpp
cpp/image-acquisition/save-jpeg-file/: CMakeLists.txt
cpp/image-acquisition/save-jpeg-file/src/: save-jpeg-file.cpp
cpp/qt6/: CMakeLists.txt
cpp/qt6/common/: setup_qt.cmake  windeployqt.cmake
cpp/qt6/common/qt6-dialogs/: CMakeLists.txt  DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  PropertyDialog.cpp  PropertyDialog.h  ResourceSelector.h  deviceselection.cpp  deviceselection.h  qt6dialogs.qrc
cpp/qt6/common/qt6-dialogs/controls/: Event.h  FormGroupBox.h  IPConfigGroupBox.cpp  IPConfigGroupBox.h  PropertyControls.cpp  PropertyControls.h  PropertyInfoBox.h  PropertyTreeWidget.cpp  PropertyTreeWidget.h  SwitchDriverGroupBox.cpp  SwitchDriverGroupBox.h
cpp/qt6/common/qt6-dialogs/controls/props/: PropBooleanControl.h  PropCategoryControl.h  PropCommandControl.h  PropControlBase.h  PropEnumerationControl.h  PropFloatControl.h  PropIntControl.h  PropIntSlider.h  PropIntSpinBox.h  PropStringControl.h
cpp/qt6/demoapp/: CMakeLists.txt  demoapp.qrc  demoapp.rc  events.h  fpscounter.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  pathutils.h  settings.cpp  settings.h  uitils.cpp  utils.h
cpp/qt6/demoapp/ic4dialogs/deviceselection/: IPConfigGroupBox.cpp  IPConfigGroupBox.h  deviceselection.cpp  deviceselection.h
cpp/qt6/demoapp/ic4dialogs/propertydlg/: propertydlg.cpp  propertydlg.h
cpp/qt6/device-manager/: CMakeLists.txt  main.cpp
cpp/qt6/high-speed-capture/: CMakeLists.txt  HighSpeedCaptureDialog.cpp  HighSpeedCaptureDialog.h  main.cpp
cpp/thirdparty-integration/imagebuffer-opencv-snap/: CMakeLists.txt
cpp/thirdparty-integration/imagebuffer-opencv-snap/src/: imagebuffer-opencv-snap.cpp
cpp/win32-mfc/demoapp/: MFC-DemoApp.cpp  MFC-DemoApp.h  MFC-DemoApp.sln  MFC-DemoApp.vcxproj  MFC-DemoApp.vcxproj.filters  MFC-DemoAppDoc.cpp  MFC-DemoAppDoc.h  MFC-DemoAppView.cpp  MFC-DemoAppView.h  MFCDemoApp.rc  MainFrm.cpp  StringUtil.cpp  StringUtil.h  pch.h  resource.h
cpp/win32-mfc/demoapp/res/: MFCDemoApp.rc2
dotnet/: README.md
dotnet/advanced-camera-features/ActionCommandBroadcastTrigger/: ActionCommandBroadcastTrigger.sln
dotnet/advanced-camera-features/EventExposureEnd/: EventExposureEnd.sln
dotnet/advanced-camera-features/EventLine1Edge/: EventLine1Edge.sln
dotnet/camera-specific/DoLPSegmentation/: DoLPSegmentation.sln  README.md
dotnet/common/ConsoleHelper/: ConsoleHelper.cs  ConsoleHelper.csproj
dotnet/device-handling/DeviceEnumeration/: DeviceEnumeration.sln
dotnet/device-handling/DeviceListChanged/: DeviceListChanged.sln
dotnet/device-handling/DeviceLost/: DeviceLost.sln
dotnet/ic4-ctrl/: ic4-ctrl.sln
dotnet/ic4-ctrl/ic4-ctrl/: Program.cs  ic4-ctrl.csproj  packages.config
dotnet/ic4-property-dialog/: ic4-property-dialog.sln
dotnet/ic4-property-dialog/PropertyView/: Appearance.cs  CustomNumericUpDown.cs  NoFocusTrackBar.cs  PropBooleanControl.cs  PropCommandControl.cs  PropControlBase.cs  PropEnumerationControl.cs  PropFloatControl.cs  PropIntegerControl.cs  PropStringControl.cs  PropertyTreeNode.cs  PropertyView.Designer.cs  PropertyView.cs  PropertyView.csproj  WinformsUtil.cs  packages.config
dotnet/ic4-property-dialog/ic4-property-dialog/: Form1.Designer.cs  Form1.cs  Program.cs  ic4-property-dialog.csproj  packages.config
dotnet/image-aquisition/SaveBmpOnTrigger/: SaveBmpOnTrigger.sln
dotnet/thirdparty-integration/ImageBufferOpenCVLive/: ImageBufferOpenCVLive.sln
dotnet/vb.net/VB First Steps/: README.md  VB First Steps.sln
dotnet/winforms/DialogApp-framework45/: DialogApp-framework45.sln
dotnet/winforms/DialogApp-net6/: DialogApp-net6.sln  DialogApp.sln
dotnet/winforms/GraphicOverlay/: GraphicOverlay.sln  README.md
dotnet/winforms/HighSpeedCapture/: HighSpeedCapture.sln
python/: README.md  ic4-ctrl
python/camera-specific/DolP-Segmentation/: DolPSegmentation.py  (+3 more)
python/gtk3/: demoapp.py  display.py
python/thirdparty-integration/: README.md
(+103 files in other folders)
